--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.7",
     "aws-amplify": "^6.2.0",
+    "emoji-picker-react": "^4.11.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
