--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.7",
     "aws-amplify": "^6.2.0",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "emoji-picker-react": "^4.11.1",
     "next": "14.1.4",
     "react": "^18",
